--- a/api/package.json
+++ b/api/package.json
@@ -8,6 +8,7 @@
     "global": "^4.4.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "ws": "^8.16.0"
   }
 }
